# jmssh

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/: SECURITY.md
.github/workflows/: release.yml
src/: app.rs  cli.rs  db.rs  error.rs  main.rs  term.rs
src/entity/: local_auth.rs  mod.rs  profiles.rs  routes.rs
src/handlers/: connect.rs  mod.rs  password.rs  profile.rs
src/infra/: mod.rs  password_store.rs
src/ui/tui/: connect.rs  mod.rs
src/usecase/: connect.rs  mod.rs  password.rs  profile.rs
