[package]
name = "jmssh"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
opt-level = 3
strip = "symbols"

[dependencies]
anyhow = "1.0.0"
atty = "0.2.0"
clap = { version = "4.5.0", features = ["derive"] }
directories = "6.0.0"
itertools = "0.14.0"
sea-orm = { version = "1.1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = "1.0.0"
serde_json = "1.0.0"
thiserror = "2.0.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "rt"] }
tokio-macros = "2.6.0"
