[package]
name = "jmssh"
version = "0.2.0"
edition = "2024"

[profile.release]
lto = "fat"
opt-level = 3
strip = "symbols"

[dependencies]
anyhow = "1"
atty = "0"
clap = { version = "4", features = ["derive"] }
directories = "6"
expectrl = "0"
itertools = "0"
rpassword = "7"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = "1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
tokio-macros = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "sync-secret-service", "crypto-rust", "vendored"] }
tabwriter = { version = "1", features = ["ansi_formatting"] }
console = "0"

[target.'cfg(unix)'.dependencies]
skim = "0"
